# toolbox

./: .gitignore  .gitmodules  .prettierignore  README.md  config.example.json  package.json  package1.json  pnpm-lock.yaml  pnpm-workspace.yaml  taze.config.js  tsconfig.json  vite.config.ts
.github/workflows/: docs.yml
docs/: index.md  package.json  plugin.md
docs/.vitepress/: config.js
docs/plugin/: create.md  index.md  list.md
docs/public/: CNAME
docs/src/: index.md
docs/src/.vitepress/: config.js
docs/src/plugin/: create.md  index.md  list.md
plugins/calc/: Cargo.toml  LICENSE  README.md  config.json
plugins/calc/src/: calculator.rs  main.rs
plugins/screenshot/: Cargo.toml
plugins/screenshot/src/: lib.rs
scripts/: index.mjs
src/: App.vue  main.ts
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json  plugin.json  preview.json
src-tauri/config/: installer.nsh
src-tauri/plugins/plugin-b/: config.json  index.html
src-tauri/plugins/plugin-c/: config.json
src-tauri/resource/plugins/plugin-a/: config.json
src-tauri/resource/plugins/screenshot/: config.json
src-tauri/resources/capabilities/: readme.md
src-tauri/resources/config/: caddy.json  internal-plugins.json
src-tauri/resources/plugins/calc/: config.json
src-tauri/resources/plugins/json-beautification/: config.json  index.html
src-tauri/resources/plugins/plugin-a/: config.json  index.js
src-tauri/resources/plugins/plugin-b/: index.html
src-tauri/resources/plugins/plugin-c/: config.json  index.html
src-tauri/resources/plugins/screenshot/: config.json  index.html
src-tauri/src/: apps.rs  command.rs  dylib.rs  lib.rs  main.rs  plugin.rs  scripts.rs  tray.rs  utils.rs
src-tauri/src/apps/: lnk.rs  macos.rs  mod.rs  windows.rs
src-tauri/src/platform/: mod.rs
src-tauri/src/platform/macos/: mod.rs  screenshot.rs
src-tauri/src/platform/windows/: apps.rs  helper.rs  mod.rs  preview.rs  screenshot.rs
src-tauri/src/plugins/: mod.rs  plugins.rs
src-tauri/src/screen-capture/: mod.rs
src-tauri/src/screen-capture/linux/: capture.rs
src-tauri/src/screen-capture/macos/: capture.rs
src-tauri/src/screen-capture/windows/: capture.rs
src-tauri/src/utils/: capability.rs  config.rs  mod.rs  preview.rs  shortcut.rs  utils.rs
src/assets/css/: global.scss  reset.css
src/components/: install-plugin.vue
src/components/icons/: close.vue  max.vue  min.vue
src/data/: internal-plugins.ts
src/hooks/: useMenu.ts
src/layout/: header.vue
src/router/: index.ts  plugins.ts
src/store/: index.ts
src/utils/: index.ts  plugin.ts  typescript.ts  utils.ts  window.ts
src/views/home/: index.vue  layout.vue
src/views/home/plugins/: index.vue
src/views/home/setting/: index.vue
src/views/home/setting/components/: item.vue
src/views/plugins/: color-conversion.vue  layout.vue
src/views/plugins/layouts/: header.vue
src/views/preview/: image.vue  layout.vue  not-support.vue  video.vue
src/views/preview/components/: footer.vue  header.vue
src/views/search/: index.vue
src/views/search/components/: result.vue  search.vue
