[package]
name = "toolbox"
version = "0.1.0"
description = "toolbox"
authors = ["GuoJiKun <guojikun486546@163.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
libloading = "0.8.4"
tauri = { version = "2.0.0-rc", features = ["tray-icon", "unstable"] }
tauri-plugin-shell = "2.0.0-rc"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-global-shortcut = "2.0.0-rc"
tauri-plugin-dialog = "2.0.0-rc"
tauri-plugin-fs = "2.0.0-rc"
dirs-next = "2.0.0"
walkdir = "2.3"
md5 = "0.7.0"
screenshot_desktop = "0.1.0"
fs_extra = "1.3.0"
tauri-plugin-store = "2.0.0-rc"
chrono = "0.4.38"
image = "0.25.2"
scrap = "0.5.0"
memmap2 = "0.9.4"


[target.'cfg(windows)'.dependencies]
winreg = "0.52.0"
lnk = "0.5.1"
windows = { version = "0.58.0", features = [
    "Win32_System_Com",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_Storage_FileSystem",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Ole",
] }

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-autostart = "2.0.0-rc"
tauri-plugin-cli = "2.0.0-rc"

[target.'cfg(target_os = "macos")'.dependencies]
plist = "1.7.0"
