[package]
name = "toolbox"
version = "0.1.0"
description = "toolbox"
authors = ["GuoJiKun <guojikun486546@163.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "toolbox_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [ "protocol-asset", "tray-icon", "unstable"] }
tauri-plugin-shell = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libloading = "0.8.5"
tauri-plugin-store = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
memmap2 = "0.9.5"
md5 = "0.7.0"
fs_extra = "1.3.0"
walkdir = "2.5.0"
chrono = "0.4.38"
image = "0.25.2"
scrap = "0.5.0"
infer = { version = "0.16.0", features = ["std"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.52.0"
windows = { version = "0.58.0", features = [
    "Win32_System_Com",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_Storage_FileSystem",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Ole",
] }

[target.'cfg(target_os = "macos")'.dependencies]
plist = "1.7.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-cli = "2"
tauri-plugin-global-shortcut = "2"
